# try

./: CMakeLists.txt  bullet.cpp  bullet.h  button.cpp  button.h  difficultywindow.cpp  difficultywindow.h  enemy.cpp  enemy.h  index.html  mainwindow.cpp  mainwindow.h  radish.cpp  resources.qrc  startwindow.cpp  startwindow.h  tower.cpp  tower.h
